--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon solid fa-coffee">About Equitea</span></a></li>
+								<li><a href="#missionstatement" id="missionstatement-link"><span class="icon solid fa-book">Our Mission Statement</span></a></li>
+								<li><a href="#schedule" id="schedule-link"><span class="icon solid fa-calendar-alt">Schedule</span></a></li>
+								<li><a href="#committee" id="committee-link"><span class="icon solid fa-users">Committee</span></a></li>
 							</ul>
 						</nav>
 
