update website details

--- a/index.html
+++ b/index.html
@@ -30,24 +30,12 @@
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-coffee">About Equitea</span></a></li>
-								<li><a href="#missionstatement" id="missionstatement-link"><span class="icon solid fa-book">Our Mission Statement</span></a></li>
+								<li><a href="#missionstatement" id="mission-link"><span class="icon solid fa-book">Our Mission Statement</span></a></li>
 								<li><a href="#schedule" id="schedule-link"><span class="icon solid fa-calendar-alt">Schedule</span></a></li>
 								<li><a href="#committee" id="committee-link"><span class="icon solid fa-users">Committee</span></a></li>
+								<li><a href="#contact" id="contact-link"><span class="icon solid fa-users">Committee</span></a></li>
 							</ul>
 						</nav>
-
-				</div>
-
-				<div class="bottom">
-
-					<!-- Social Icons -->
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
 
 				</div>
 
@@ -77,9 +65,13 @@
 							</header>
 
 							<p>No one person is responsible for all of science - we are the sum of all the diverse minds that contribute towards our 
-								knowledge in every field. </p>
+								knowledge in every field. Not all of us are treated equally however, with many still subjected to acts of discrimination
+								which robs them of the the ability to exist in academic circles. </p>
 
-							<p>We here in the Astrophysics Research Centre want to commit to  </p>
+							<p>We here in the Astrophysics Research Centre want to commit to promoting a welcoming, shared environment for anyone to
+								engage in freely. This equitea project aims to be our way of amplifying marginalised voices, allowing us to learn form
+								and improve our academic community for the current and future generations. This is a place for both minority groups and allies
+								alike - we only ask that you listen and learn!</p>
 
 						</div>
 					</section>
@@ -102,6 +94,103 @@
 						</div>
 					</section>
 
+				<!-- Schedule -->
+					<section id="schedule" class="four">
+						<div class="container">
+
+							<header>
+								<h2>Schedule</h2>
+							</header>
+
+							<p>Currently our meetings are held once per semester, with times and dates subject to change based on availability.
+								Check back here for the most up-to-date information!</p>
+
+							<p>Previous meetings, including minutes and resources, can be found here!</p>
+
+							<table>
+								<tr>
+									<th>Date & Time</th>
+									<th>Discussion Topic</th>
+									<th>Chair</th>
+									<th>Speaker</th>
+									<tr>Recommended Reading</tr>
+								</tr>
+								<tr>
+									<th>20/07/23 3-4pm</th>
+									<th>Accessibility in conferences</th>
+									<th>Sean O'Brien</th>
+									<th> - </th>
+									<th><a href="https://arxiv.org/pdf/1704.05260.pdf"><em>The Role of Gender in Asking Questions at Cool Stars 18 and 19</em></a></th>
+								</tr>
+							</table>
+						</div>
+					</section>
+
+				<!-- Committee -->
+					<section id="committee" class="five">
+						<div class="container">
+
+							<header>
+								<h2>Our Committee</h2>
+							</header>
+
+							<p>Our committee is made up of volunteers from the PGR and PDRA members at QUB. Membership will be 
+								ratified yearly, and we welcome anyone who is interested in joining to get in contact!</p>
+
+							<table>
+								<tr>
+									<th> </th>
+									<th>Name</th>
+									<th>Role</th>
+									<th>Email</th>
+									<th>Links</th>
+								</tr>
+								<tr>
+									<th><img src="images/sob.jpg"></th>
+									<th>Sean O'Brien<br>(he/him)</th>
+									<th>Chair</th>
+									<th>sobrien27 [at] qub.ac.uk</th>
+									<th><a href="https://astro-sobrien.github.io/">&#127760; Personal Website</a></th>
+								</tr>
+								<tr>
+									<th><img src="images/sm.jpg"></th>
+									<th>Steph Merritt<br>(they/them)</th>
+									<th>Treasurer</th>
+									<th>s.merritt [at] qub.ac.uk</th>
+									<th> </th>
+								</tr>
+								<tr>
+									<th><img src="images/ld.jpg"></th>
+									<th>Lucy Dolan<br>(she/her)</th>
+									<th>Speaker Liaison</th>
+									<th>ldolan05 [at] qub.ac.uk</th>
+									<th> </th>
+								</tr>
+								<tr>
+									<th><img src="images/jm.jpg"></th>
+									<th>Joseph Murtagh<br>(he/him)</th>
+									<th>Digital Communications</th>
+									<th>jmurtagh05 [at] qub.ac.uk</th>
+									<th> </th>
+								</tr>
+								<tr>
+									<th><img src="images/dj.jpg"></th>
+									<th>David Jackson<br>(he/him)</th>
+									<th>Committee Member<br>(PGR)</th>
+									<th>djackson823 [at] qub.ac.uk</th>
+									<th> </th>
+								</tr>
+								<tr>
+									<th><img src="images/mh.jpg"></th>
+									<th>Mandy Hewitt<br>(she/her)</th>
+									<th>Committee Member<br>(PGR)</th>
+									<th>hhewitt01 [at] qub.ac.uk</th>
+									<th> </th>
+								</tr>
+							</table>
+						</div>
+					</section>
+
 				<!-- Contact -->
 					<section id="contact" class="four">
 						<div class="container">
@@ -110,10 +199,8 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>Have any comments/criticisms/general feedback? Feel free to let us know using
+								the Microsoft Form below - all responses will be anonymous!</p>
 
 							<form method="post" action="#">
 								<div class="row">
