update image scale

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 							<header>
 								<h2 class="alt">A forumn for open discussion of issues and topics related to equity, diversity, and inclusion (EDI) 
-									in relation to astrophysics and academia as a whole.</a>.</h2>
+									in relation to astrophysics and academia as a whole.</a></h2>
 							</header>
 
 						</div>
