re-update images

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<li><a href="#missionstatement" id="mission-link"><span class="icon solid fa-book">Our Mission Statement</span></a></li>
 								<li><a href="#schedule" id="schedule-link"><span class="icon solid fa-calendar-alt">Schedule</span></a></li>
 								<li><a href="#committee" id="committee-link"><span class="icon solid fa-users">Committee</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon solid fa-users">Committee</span></a></li>
+								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
 
@@ -49,7 +49,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">A forumn for open discussion of issues and topics related to equity, diversity, and inclusion (EDI) 
+								<h2 class="alt">A forum for open discussion of issues and topics related to equity, diversity, and inclusion (EDI) 
 									in relation to astrophysics and academia as a whole.</a></h2>
 							</header>
 
@@ -113,7 +113,7 @@
 									<th>Discussion Topic</th>
 									<th>Chair</th>
 									<th>Speaker</th>
-									<tr>Recommended Reading</tr>
+									<th>Recommended Reading</th>
 								</tr>
 								<tr>
 									<th>20/07/23 3-4pm</th>
