--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
 									<th>Links</th>
 								</tr>
 								<tr>
-									<th><img src="images/sob.jpg"></th>
+									<th><img src="images/sob.jpeg"></th>
 									<th>Sean O'Brien<br>(he/him)</th>
 									<th>Chair</th>
 									<th>sobrien27 [at] qub.ac.uk</th>
 									<th><a href="https://astro-sobrien.github.io/">&#127760; Personal Website</a></th>
 								</tr>
 								<tr>
-									<th><img src="images/sm.jpg"></th>
+									<th><img src="images/sm.jpeg"></th>
 									<th>Steph Merritt<br>(they/them)</th>
 									<th>Treasurer</th>
 									<th>s.merritt [at] qub.ac.uk</th>
