--- a/index.html
+++ b/index.html
@@ -146,35 +146,35 @@
 									<th>Links</th>
 								</tr>
 								<tr>
-									<th><img src="images/sob.jpeg"></th>
+									<th><img src="images/sob.jpeg" width="50" height="50"></th>
 									<th>Sean O'Brien<br>(he/him)</th>
 									<th>Chair</th>
 									<th>sobrien27 [at] qub.ac.uk</th>
 									<th><a href="https://astro-sobrien.github.io/">&#127760; Personal Website</a></th>
 								</tr>
 								<tr>
-									<th><img src="images/sm.jpeg"></th>
+									<th><img src="images/sm.jpeg" width="50" height="50"></th>
 									<th>Steph Merritt<br>(they/them)</th>
 									<th>Treasurer</th>
 									<th>s.merritt [at] qub.ac.uk</th>
 									<th> </th>
 								</tr>
 								<tr>
-									<th><img src="images/ld.jpg"></th>
+									<th><img src="images/ld.jpg" width="50" height="50"></th>
 									<th>Lucy Dolan<br>(she/her)</th>
 									<th>Speaker Liaison</th>
 									<th>ldolan05 [at] qub.ac.uk</th>
 									<th> </th>
 								</tr>
 								<tr>
-									<th><img src="images/jm.jpg"></th>
+									<th><img src="images/jm.jpg" width="50" height="50"></th>
 									<th>Joseph Murtagh<br>(he/him)</th>
 									<th>Digital Communications</th>
 									<th>jmurtagh05 [at] qub.ac.uk</th>
 									<th> </th>
 								</tr>
 								<tr>
-									<th><img src="images/dj.jpg"></th>
+									<th><img src="images/dj.jpg" width="50" height="50"></th>
 									<th>David Jackson<br>(he/him)</th>
 									<th>Committee Member<br>(PGR)</th>
 									<th>djackson823 [at] qub.ac.uk</th>
