--- a/index.html
+++ b/index.html
@@ -37,6 +37,39 @@
 							</ul>
 						</nav>
 
+					<!-- Ground Rules -->
+						<div id="groundrules">
+							<font size="3">
+							<ol>
+								<li>his is a space for everyone to learn and grow.</li>
+									<ul>
+										<li><em>Remember, no-one is perfect, If you make a mistake, remember to apologise and learn from it. 
+											If someone says something that is incorrect, please make sure to correct them kindly, rather than berating them.</em></li>
+									</ul>
+								<li>The voices and needs of the most vulnerable in any given conversation should be prioritised.</li>
+									<ul>
+										<li><em>As such, please be conscious of how much space you’re taking up in a conversation. Please be 
+											extra conscious if you hold a privileged or dominant identity when discussing a form of inequality or oppression. 
+											Listen to and amplify the voices of those who have the lived experience; do not talk over them.</em></li>
+									</ul>
+								<li>Disagree with ideas, not people.</li>
+									<ul>
+										<li><em>Use "I" statements to speak from your personal perspective, rather than making generalizations.</em></li>
+									</ul>
+								<li>Avoid playing devil’s advocate.</li>
+									<ul>
+										<li><em>Specifically, do not argue for contrarian positions for the sake of debate. Only argue for positions that you 
+											actually hold.</em></li>
+									</ul>
+								<li>Be respectful of the emotions people may display – don’t let it take away from the content of their speech.</li>
+									<ul>
+										<li><em>Be aware that there can be a lot of emotional weight associated with lived experiences. Therefore, people may misspeak 
+											or become emotional when discussing an experience they have lived. Please be conscious that this is rooted in emotion 
+											and should not take away from the content that they are trying to share.</em></li>
+									</ul>
+							</ol>
+							</font>
+						</div>
 				</div>
 
 			</div>
