--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 						</nav>
 
 					<!-- Ground Rules -->
-						<div id="groundrules">
+						<div id="groundrules" align="left">
 							<font size="3">
 							<ol>
-								<li>his is a space for everyone to learn and grow.</li>
+								<li>This is a space for everyone to learn and grow.</li>
 									<ul>
 										<li><em>Remember, no-one is perfect, If you make a mistake, remember to apologise and learn from it. 
 											If someone says something that is incorrect, please make sure to correct them kindly, rather than berating them.</em></li>
