--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 					<!-- Ground Rules -->
 						<div id="groundrules" align="left">
 							<font size="2">
-							<ol>
+							<p>We follow the <a href="https://aas.org/policies/ethics">AAS Code of Ethics</a> in our discussions, with
+								our own guidance below:</p>
+							<ol align="center">
 								<li>This is a space for everyone to learn and grow.</li>
 									<ul>
 										<li><em>Remember, no-one is perfect, If you make a mistake, remember to apologise and learn from it. 
