padding of grules

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						</nav>
 
 					<!-- Ground Rules -->
-						<div id="groundrules" align="left">
+						<div id="groundrules" align="left" style="color: #808183; padding-left: 10pix; padding-right: 10pix">
 							<font size="2">
 							<p style="line-height:80%">We follow the <a href="https://aas.org/policies/ethics">AAS Code of Ethics</a> in our discussions, with
 								our own guidance below:</p>
