--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<div id="header">
+			<div id="header" style="background-color: #ad4d38">
 
 				<div class="top">
 
@@ -37,11 +37,11 @@
 						</nav>
 
 					<!-- Ground Rules -->
-						<div id="groundrules" align="left" style="color: #808183; padding-left: 10pix; padding-right: 10pix">
+						<div id="groundrules" align="left" style="color: #808183; padding-left: 30pix; padding-right: 30pix">
 							<font size="2">
-							<p style="line-height:80%">We follow the <a href="https://aas.org/policies/ethics">AAS Code of Ethics</a> in our discussions, with
+							<p style="line-height:90%">We follow the <a href="https://aas.org/policies/ethics">AAS Code of Ethics</a> in our discussions, with
 								our own guidance below:</p>
-							<ol align="center" style="line-height:80%">
+							<ol align="center" style="line-height:90%">
 								<li>This is a space for everyone to learn and grow.</li>
 									<ul>
 										<li><em>Remember, no-one is perfect, If you make a mistake, remember to apologise and learn from it. 
@@ -171,13 +171,13 @@
 							<p>Our committee is made up of volunteers from the PGR and PDRA members at QUB. Membership will be 
 								ratified yearly, and we welcome anyone who is interested in joining to get in contact!</p>
 
-							<table>
+							<table style="width: 840px; max-width: 100%;">
 								<tr>
-									<th> </th>
-									<th>Name</th>
-									<th>Role</th>
-									<th>Email</th>
-									<th>Links</th>
+									<th style="background-color: #ad4d38; text-align: left;"> </th>
+									<th style="background-color: #ad4d38; text-align: left;">Name</th>
+									<th style="background-color: #ad4d38; text-align: left;">Role</th>
+									<th style="background-color: #ad4d38; text-align: left;">Email</th>
+									<th style="background-color: #ad4d38; text-align: left;">Links</th>
 								</tr>
 								<tr>
 									<th><img src="images/sob.jpeg" width="150" height="150"></th>
