--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<div id="header" style="background-color: #ad4d38">
+			<div id="header" style="background-color: #863b2b">
 
 				<div class="top">
 
@@ -37,7 +37,7 @@
 						</nav>
 
 					<!-- Ground Rules -->
-						<div id="groundrules" align="left" style="color: #808183; padding-left: 30pix; padding-right: 30pix">
+						<div id="groundrules" align="left" style="color: #d0a99f; padding-left: 30pix; padding-right: 30pix">
 							<font size="2">
 							<p style="line-height:90%">We follow the <a href="https://aas.org/policies/ethics">AAS Code of Ethics</a> in our discussions, with
 								our own guidance below:</p>
