colour edits to tables

--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
 							<p>Previous meetings, including minutes and resources, can be found here!</p>
 
 							<table>
-								<tr>
+								<tr style="background-color: #ad4d38; text-align: left;">
 									<th>Date & Time</th>
 									<th>Discussion Topic</th>
 									<th>Chair</th>
 									<th>Speaker</th>
 									<th>Recommended Reading</th>
 								</tr>
-								<tr>
+								<tr style="background-color: #FFFFFF; text-align: left;">
 									<th>20/07/23 3-4pm</th>
 									<th>Accessibility in conferences</th>
 									<th>Sean O'Brien</th>
@@ -179,42 +179,42 @@
 									<th style="background-color: #ad4d38; text-align: left;">Email</th>
 									<th style="background-color: #ad4d38; text-align: left;">Links</th>
 								</tr>
-								<tr>
+								<tr style="background-color: #FFFFFF; text-align: left;">
 									<th><img src="images/sob.jpeg" width="150" height="150"></th>
 									<th>Sean O'Brien<br>(he/him)</th>
 									<th>Chair</th>
 									<th>sobrien27 [at] qub.ac.uk</th>
 									<th><a href="https://astro-sobrien.github.io/">&#127760; Personal Website</a></th>
 								</tr>
-								<tr>
+								<tr style="background-color: #FFFFFF; text-align: left;">
 									<th><img src="images/sm.jpeg" width="150" height="150"></th>
 									<th>Steph Merritt<br>(they/them)</th>
 									<th>Treasurer</th>
 									<th>s.merritt [at] qub.ac.uk</th>
 									<th> </th>
 								</tr>
-								<tr>
+								<tr style="background-color: #FFFFFF; text-align: left;">
 									<th><img src="images/ld.jpg" width="150" height="150"></th>
 									<th>Lucy Dolan<br>(she/her)</th>
 									<th>Speaker Liaison</th>
 									<th>ldolan05 [at] qub.ac.uk</th>
 									<th> </th>
 								</tr>
-								<tr>
+								<tr style="background-color: #FFFFFF; text-align: left;">
 									<th><img src="images/jmm.jpg" width="150" height="150"></th>
 									<th>Joseph Murtagh<br>(he/him)</th>
 									<th>Digital Communications</th>
 									<th>jmurtagh05 [at] qub.ac.uk</th>
 									<th> </th>
 								</tr>
-								<tr>
+								<tr style="background-color: #FFFFFF; text-align: left;">
 									<th><img src="images/dj.jpg" width="150" height="150"></th>
 									<th>David Jackson<br>(he/him)</th>
 									<th>Committee Member<br>(PGR)</th>
 									<th>djackson823 [at] qub.ac.uk</th>
 									<th> </th>
 								</tr>
-								<tr>
+								<tr style="background-color: #FFFFFF; text-align: left;">
 									<th></th>
 									<th>Mandy Hewitt<br>(she/her)</th>
 									<th>Committee Member<br>(PGR)</th>
