--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 							<p>Our committee is made up of volunteers from the PGR and PDRA members at QUB. Membership will be 
 								ratified yearly, and we welcome anyone who is interested in joining to get in contact!</p>
 
-							<table style="width: 840px; max-width: 100%;">
+							<table style="width: 1200px; max-width: 100%;">
 								<tr>
 									<th style="background-color: #ad4d38; text-align: left;"> </th>
 									<th style="background-color: #ad4d38; text-align: left;">Name</th>
@@ -179,47 +179,47 @@
 									<th style="background-color: #ad4d38; text-align: left;">Email</th>
 									<th style="background-color: #ad4d38; text-align: left;">Links</th>
 								</tr>
-								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th><img src="images/sob.jpeg" width="150" height="150"></th>
-									<th>Sean O'Brien<br>(he/him)</th>
-									<th>Chair</th>
-									<th>sobrien27 [at] qub.ac.uk</th>
-									<th><a href="https://astro-sobrien.github.io/">&#127760; Personal Website</a></th>
+								<tr>
+									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/sob.jpeg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; text-align: left;">Sean O'Brien<br>(he/him)</th>
+									<th style="background-color: #FFFFFF; text-align: left;">Chair</th>
+									<th style="background-color: #FFFFFF; text-align: left;">sobrien27 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; text-align: left;"><a href="https://astro-sobrien.github.io/">&#127760; Personal Website</a></th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th><img src="images/sm.jpeg" width="150" height="150"></th>
-									<th>Steph Merritt<br>(they/them)</th>
-									<th>Treasurer</th>
-									<th>s.merritt [at] qub.ac.uk</th>
-									<th> </th>
+									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/sm.jpeg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; text-align: left;">Steph Merritt<br>(they/them)</th>
+									<th style="background-color: #FFFFFF; text-align: left;">Treasurer</th>
+									<th style="background-color: #FFFFFF; text-align: left;">s.merritt [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; text-align: left;"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th><img src="images/ld.jpg" width="150" height="150"></th>
-									<th>Lucy Dolan<br>(she/her)</th>
-									<th>Speaker Liaison</th>
-									<th>ldolan05 [at] qub.ac.uk</th>
-									<th> </th>
+									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/ld.jpg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; text-align: left;">Lucy Dolan<br>(she/her)</th>
+									<th style="background-color: #FFFFFF; text-align: left;">Speaker Liaison</th>
+									<th style="background-color: #FFFFFF; text-align: left;">ldolan05 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; text-align: left;"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th><img src="images/jmm.jpg" width="150" height="150"></th>
-									<th>Joseph Murtagh<br>(he/him)</th>
-									<th>Digital Communications</th>
-									<th>jmurtagh05 [at] qub.ac.uk</th>
-									<th> </th>
+									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/jmm.jpg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; text-align: left;">Joseph Murtagh<br>(he/him)</th>
+									<th style="background-color: #FFFFFF; text-align: left;">Digital Communications</th>
+									<th style="background-color: #FFFFFF; text-align: left;">jmurtagh05 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; text-align: left;"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th><img src="images/dj.jpg" width="150" height="150"></th>
-									<th>David Jackson<br>(he/him)</th>
-									<th>Committee Member<br>(PGR)</th>
-									<th>djackson823 [at] qub.ac.uk</th>
-									<th> </th>
+									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/dj.jpg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; text-align: left;">David Jackson<br>(he/him)</th>
+									<th style="background-color: #FFFFFF; text-align: left;">Committee Member<br>(PGR)</th>
+									<th style="background-color: #FFFFFF; text-align: left;">djackson823 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; text-align: left;"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th></th>
-									<th>Mandy Hewitt<br>(she/her)</th>
-									<th>Committee Member<br>(PGR)</th>
-									<th>hhewitt01 [at] qub.ac.uk</th>
-									<th> </th>
+									<th style="background-color: #FFFFFF; text-align: left;"></th>
+									<th style="background-color: #FFFFFF; text-align: left;">Mandy Hewitt<br>(she/her)</th>
+									<th style="background-color: #FFFFFF; text-align: left;">Committee Member<br>(PGR)</th>
+									<th style="background-color: #FFFFFF; text-align: left;">hhewitt01 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; text-align: left;"> </th>
 								</tr>
 							</table>
 						</div>
