--- a/index.html
+++ b/index.html
@@ -180,46 +180,46 @@
 									<th style="background-color: #ad4d38; text-align: left;">Links</th>
 								</tr>
 								<tr>
-									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/sob.jpeg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left;">Sean O'Brien<br>(he/him)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">Chair</th>
-									<th style="background-color: #FFFFFF; text-align: left;">sobrien27 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left;"><a href="https://astro-sobrien.github.io/">&#127760; Personal Website</a></th>
+									<th style="background-color: #f3e5e5; text-align: left;"><img src="images/sob.jpeg" width="150" height="150"></th>
+									<th style="background-color: #f3e5e5; text-align: left;">Sean O'Brien<br>(he/him)</th>
+									<th style="background-color: #f3e5e5; text-align: left;">Chair</th>
+									<th style="background-color: #f3e5e5; text-align: left;">sobrien27 [at] qub.ac.uk</th>
+									<th style="background-color: #f3e5e5; text-align: left;"><a href="https://astro-sobrien.github.io/">&#127760; Personal Website</a></th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/sm.jpeg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left;">Steph Merritt<br>(they/them)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">Treasurer</th>
-									<th style="background-color: #FFFFFF; text-align: left;">s.merritt [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left;"> </th>
+									<th style="background-color: #f3e5e5; text-align: left;"><img src="images/sm.jpeg" width="150" height="150"></th>
+									<th style="background-color: #f3e5e5; text-align: left;">Steph Merritt<br>(they/them)</th>
+									<th style="background-color: #f3e5e5; text-align: left;">Treasurer</th>
+									<th style="background-color: #f3e5e5; text-align: left;">s.merritt [at] qub.ac.uk</th>
+									<th style="background-color: #f3e5e5; text-align: left;"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/ld.jpg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left;">Lucy Dolan<br>(she/her)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">Speaker Liaison</th>
-									<th style="background-color: #FFFFFF; text-align: left;">ldolan05 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left;"> </th>
+									<th style="background-color: #f3e5e5; text-align: left;"><img src="images/ld.jpg" width="150" height="150"></th>
+									<th style="background-color: #f3e5e5; text-align: left;">Lucy Dolan<br>(she/her)</th>
+									<th style="background-color: #f3e5e5; text-align: left;">Speaker Liaison</th>
+									<th style="background-color: #f3e5e5; text-align: left;">ldolan05 [at] qub.ac.uk</th>
+									<th style="background-color: #f3e5e5; text-align: left;"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/jmm.jpg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left;">Joseph Murtagh<br>(he/him)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">Digital Communications</th>
-									<th style="background-color: #FFFFFF; text-align: left;">jmurtagh05 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left;"> </th>
+									<th style="background-color: #f3e5e5; text-align: left;"><img src="images/jmm.jpg" width="150" height="150"></th>
+									<th style="background-color: #f3e5e5; text-align: left;">Joseph Murtagh<br>(he/him)</th>
+									<th style="background-color: #f3e5e5; text-align: left;">Digital Communications</th>
+									<th style="background-color: #f3e5e5; text-align: left;">jmurtagh05 [at] qub.ac.uk</th>
+									<th style="background-color: #f3e5e5; text-align: left;"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/dj.jpg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left;">David Jackson<br>(he/him)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">Committee Member<br>(PGR)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">djackson823 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left;"> </th>
+									<th style="background-color: #f3e5e5; text-align: left;"><img src="images/dj.jpg" width="150" height="150"></th>
+									<th style="background-color: #f3e5e5; text-align: left;">David Jackson<br>(he/him)</th>
+									<th style="background-color: #f3e5e5; text-align: left;">Committee Member<br>(PGR)</th>
+									<th style="background-color: #f3e5e5; text-align: left;">djackson823 [at] qub.ac.uk</th>
+									<th style="background-color: #f3e5e5; text-align: left;"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left;"></th>
-									<th style="background-color: #FFFFFF; text-align: left;">Mandy Hewitt<br>(she/her)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">Committee Member<br>(PGR)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">hhewitt01 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left;"> </th>
+									<th style="background-color: #f3e5e5; text-align: left;"></th>
+									<th style="background-color: #f3e5e5; text-align: left;">Mandy Hewitt<br>(she/her)</th>
+									<th style="background-color: #f3e5e5; text-align: left;">Committee Member<br>(PGR)</th>
+									<th style="background-color: #f3e5e5; text-align: left;">hhewitt01 [at] qub.ac.uk</th>
+									<th style="background-color: #f3e5e5; text-align: left;"> </th>
 								</tr>
 							</table>
 						</div>
