--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 							<p>Previous meetings, including minutes and resources, can be found here!</p>
 
-							<table style="width: 1200px; max-width: 100%; color: black">
+							<table style="width: 1200px; max-width: 100%;" color: black>
 								<tr>
 									<th style="background-color: #ad4d38; text-align: left;">Date & Time</th>
 									<th style="background-color: #ad4d38; text-align: left;">Discussion Topic</th>
