txtclr to black

--- a/index.html
+++ b/index.html
@@ -141,20 +141,20 @@
 
 							<p>Previous meetings, including minutes and resources, can be found here!</p>
 
-							<table style="width: 1200px; max-width: 100%;" color: black>
+							<table style="width: 1200px; max-width: 100%; color: black">
 								<tr>
-									<th style="background-color: #ad4d38; text-align: left;">Date & Time</th>
-									<th style="background-color: #ad4d38; text-align: left;">Discussion Topic</th>
-									<th style="background-color: #ad4d38; text-align: left;">Chair</th>
-									<th style="background-color: #ad4d38; text-align: left;">Speaker</th>
-									<th style="background-color: #ad4d38; text-align: left;">Recommended Reading</th>
+									<th style="background-color: #ad4d38; text-align: left; color: black">Date & Time</th>
+									<th style="background-color: #ad4d38; text-align: left; color: black">Discussion Topic</th>
+									<th style="background-color: #ad4d38; text-align: left; color: black">Chair</th>
+									<th style="background-color: #ad4d38; text-align: left; color: black">Speaker</th>
+									<th style="background-color: #ad4d38; text-align: left; color: black">Recommended Reading</th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left;">20/07/23 3-4pm</th>
-									<th style="background-color: #FFFFFF; text-align: left;">Accessibility in conferences</th>
-									<th style="background-color: #FFFFFF; text-align: left;">Sean O'Brien</th>
-									<th style="background-color: #FFFFFF; text-align: left;"> - </th>
-									<th style="background-color: #FFFFFF; text-align: left;"><a href="https://arxiv.org/pdf/1704.05260.pdf"><em>The Role of Gender in Asking Questions at Cool Stars 18 and 19</em></a></th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">20/07/23 3-4pm</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">Accessibility in conferences</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">Sean O'Brien</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black"> - </th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black"><a href="https://arxiv.org/pdf/1704.05260.pdf"><em>The Role of Gender in Asking Questions at Cool Stars 18 and 19</em></a></th>
 								</tr>
 							</table>
 						</div>
